theme/default/css/dynamic.css
 @import url(https://fonts.googleapis.com/css?family=Roboto);

.edusharing_rendering_cursor_pointer {
	cursor: pointer;
}

.edusharing_rendering_wrapper {
	background-color: #eee;
	padding: 0;
	margin: 0;
	font-family: 'Roboto', 'Noto', sans-serif;
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
    font-size: 100%;
    min-height: 100%;
}

.edusharing_rendering_metadata_top {
	text-align: right;
	margin-bottom: 20px;
}

#edusharing_rendering_metadata_top_toggle {
	color: #4F7A98;
}

#edusharing_rendering_metadata {
	position: absolute;
	right: 0;
	-webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.5);
	-moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.5);
	box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.5);
	background-color: #eee;
}
.edusharing_rendering_metadata_header {
	background-color: #eee;
	padding: 20px;
	font-size: 110%;
}

.edusharing_rendering_metadata_header_x {
	float: right;
	margin-left: 20px;
}

.edusharing_rendering_metadata_body {
	padding: 20px;
	background-color: #fff;
}

.edusharing_rendering_metadata_body_label {
	display: block;
	font-weight: 700;
	margin-top: 10px;
}

.edusharing_rendering_metadata_body_value {
	display: block;
}

.edusharing_rendering_content_wrapper {
	text-align: center;
}

.edusharing_rendering_content {
	text-align: center;
}

a.edusharing_rendering_content {
	border-radius: 3px;
	padding: 5px 10px;
	text-decoration: none;
	color: #fff;
	background-color: #4F7A98;
}

.edusharing_rendering_content, video, audio {
	-webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.5);
	-moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.5);
	box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.5);
	max-width: 100%;
}

